# EssentialCPP

./: .gitignore  CMakeLists.txt  README.md
include/: Matrix.h  Stack.h  Triangular.h  Triangular_iterator.h  num_sequence.h
resources/: ex3_1_dict.txt  seq_data.txt
src/: Matrix.cpp  Stack.cpp  Triangular.cpp  Triangular_iterator.cpp  binary_tree.cpp  bubble_sort.cpp  display_vec.cpp  ex1_4  ex1_4.cpp  ex2_2.cpp  ex2_5.cpp  ex3_1.cpp  ex4_1.cpp  fibo_elem.cpp  fibo_elem_static.cpp  iostream_iterator1.cpp  iterator_inserter  iterator_inserter.cpp  library_system.cpp  main.cpp  num_sequence.cpp  page7  page7.cpp  test_Matrix.cpp  test_num_sequence.cpp  test_trian.cpp  try_const_vector_ptr.cpp  utils.cpp
